# guardrails

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  action.yml
.claude/commands/: release.md
.claude/todos/: 06-violation-output-design.md
.github/workflows/: guardrails.yml  release-npm.yml
examples/: BadCard.tsx  GoodCard.tsx  baseline.example.toml  baseline.toml  claude-code-hooks.json  github-ci.yml  guardrails.example.toml  guardrails.toml  plugin-react-rules.toml
npm/cli/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
src/: config.rs  init.rs  lib.rs  main.rs  mcp.rs  presets.rs  ratchet.rs  scan.rs
src/cli/: format.rs  mod.rs  toml_config.rs
src/rules/: banned_dependency.rs  banned_import.rs  banned_pattern.rs  factory.rs  file_presence.rs  mod.rs  required_pattern.rs  tailwind_dark_mode.rs  tailwind_theme_tokens.rs  window_pattern.rs
src/rules/ast/: max_component_size.rs  mod.rs  no_cascading_set_state.rs  no_click_handler.rs  no_derived_state_effect.rs  no_nested_components.rs  no_object_dep_array.rs  no_outline_none.rs  no_regexp_in_render.rs  prefer_use_reducer.rs
