[package]
name = "guardrails"
version = "0.3.2"
edition = "2021"
description = "Enforce architectural decisions AI coding tools keep ignoring"
license = "MIT"
repository = "https://github.com/stewartjarod/guardrails"
readme = "README.md"
keywords = ["linter", "tailwind", "react", "code-quality"]
categories = ["development-tools"]

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ignore = "0.4"
rayon = "1"
globset = "0.4"
serde_json = "1"

[dev-dependencies]
tempfile = "3.25.0"
