[package]
name = "code-baseline"
version = "1.4.0"
edition = "2021"
description = "Enforce architectural decisions AI coding tools keep ignoring"
license = "MIT"
repository = "https://github.com/stewartjarod/baseline"
readme = "README.md"
keywords = ["linter", "tailwind", "react", "code-quality"]
categories = ["development-tools"]

[[bin]]
name = "baseline"
path = "src/main.rs"

[features]
default = []
ast = ["dep:tree-sitter", "dep:tree-sitter-typescript", "dep:tree-sitter-javascript"]

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ignore = "0.4"
rayon = "1"
globset = "0.4"
serde_json = "1"
tree-sitter = { version = "0.24", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }

[dev-dependencies]
tempfile = "3.25.0"
